comments and documentation